--- a/advising.ipynb
+++ b/advising.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# St Andrews Advising Tool\n",
+    "# St Andrews Mathematics and Statistics Advising Tool\n",
     "\n",
-    "Welcome to the Honours advising tool for Mathematics programmes at St Andrews. This tool is designed to check that planned module choices:\n",
+    "Welcome to the Honours advising tool for Mathematics and Statistics programmes at St Andrews. This tool is designed to check that planned module choices:\n",
     "- Satisfy the programme requirements\n",
     "- Satisfy prerequisites\n",
     "- Avoid timetable clashes\n",
     "\n",
-    "We hope that this helps you to make your choices. Please read the instructions and warnings below carefully.\n",
+    "We hope that this tool helps you to make your choices. Please read the instructions and warnings below carefully.\n",
     "\n",
     "### Warnings\n",
-    "- This tool is intended to be a helpful checker. It is not definitive, and you are ultimately responsible for ensuring that you have a valid plan for your programme.\n",
-    "- The input and output of this tool are not official; choices will still need to be made through the usual advising system, and your Adviser will still need to approve your module choices.\n",
+    "- This tool is intended to be a helpful checker but is not definitive. The definitive requirements are laid out the [programme requirements](
+https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp).\n",
+    "- The input and output of this tool are not official; choices will still need to be made through the usual advising system, and your Adviser of Studies will still need to approve your module choices.\n",
     "- The server *does not* save your module choices or summary output between sessions. You *must* save your module choices and output by downloading it before you exit the server, or it will be lost.\n",
     "\n",
     "\n",
@@ -42,13 +43,13 @@
     "10. Repeat steps 7-9 until you have resolved issues wherever possible.\n",
     "11. **Save your module choices (Right click > Download) and the `summary.docx` file.** They will be deleted when your server shuts down at the end of your session.\n",
     "12. Check for yourself that your choices satisfy:\n",
-    "    - The [programme requirements](https://www.st-andrews.ac.uk/subjects/modules/#:~:text=Psychology%20and%20Neuroscience-,Programme%20requirements,-Programme%20requirements%20to)\n",
+    "    - The [programme requirements](https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp)\n",
     "    - The [timetables](https://www.st-andrews.ac.uk/mathematics-statistics/students/taught-modules/timetables/)\n",
-    "    - Any [prerequisites](https://www.st-andrews.ac.uk/subjects/modules/all/mathematics-statistics)\n",
+    "    - Pre-requisites and other requirements as listed in the [module catalogue](https://www.st-andrews.ac.uk/subjects/modules/)\n",
     "\n",
     "### Mistakes\n",
     "\n",
-    "The advising tool is relatively new, and may sometimes be incorrect. If you have identified a mistake in the tool, please email your Adviser with:\n",
+    "The advising tool is relatively new, and may sometimes be incorrect. If you have identified a mistake in the tool, please email your Adviser of Studies with:\n",
     "1. A screenshot of the output from the cell below\n",
     "2. Your module choices sheet\n",
     "3. A brief description of what you think the mistake is"
