fixed syntax error with link

--- a/advising.ipynb
+++ b/advising.ipynb
@@ -14,8 +14,7 @@
     "We hope that this tool helps you to make your choices. Please read the instructions and warnings below carefully.\n",
     "\n",
     "### Warnings\n",
-    "- This tool is intended to be a helpful checker but is not definitive. The definitive requirements are laid out the [programme requirements](
-https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp).\n",
+    "- This tool is intended to be a helpful checker but is not definitive. The definitive requirements are laid out the [programme requirements](https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp).\n",
     "- The input and output of this tool are not official; choices will still need to be made through the usual advising system, and your Adviser of Studies will still need to approve your module choices.\n",
     "- The server *does not* save your module choices or summary output between sessions. You *must* save your module choices and output by downloading it before you exit the server, or it will be lost.\n",
     "\n",
