--- a/advising.ipynb
+++ b/advising.ipynb
@@ -15,6 +15,7 @@
     "\n",
     "### Warnings\n",
     "- This tool is intended to be a helpful checker but is not definitive. The definitive requirements are laid out the [programme requirements](https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp).\n",
+    "- Joint students should be aware that only the Mathematics and Statistics parts of programme requirements are checked.\n",
     "- The input and output of this tool are not official; choices will still need to be made through the usual advising system, and your Adviser of Studies will still need to approve your module choices.\n",
     "- The server *does not* save your module choices or summary output between sessions. You *must* save your module choices and output by downloading it before you exit the server, or it will be lost.\n",
     "\n",
@@ -22,6 +23,7 @@
     "### Instructions for use\n",
     "1. If you have not already done so, fill out your module choices in the provided Excel sheet.\n",
     "    - You can download a template (`choices-template.xlsx`) from the file tab on the left by right-clicking (MacOS: Control-click) on it. You should then complete it on your own device.\n",
+    "    - While the template is intended for students entering Honours, it can also be used by students already in Honours, just fill in the parts of the spreadsheet for future years (previous/current years will be read from your student record below).\n",
     "2. Upload your module choice sheet to this folder using the upload button on the left:\n",
     "<center><img src=\"images/upload.png\" alt=\"Location of upload button, near top-left of window\" width=\"250\"/> </center>\n",
     "    You can alternatively drag-and-drop your file into the file browser area on the left:\n",
