--- a/advising.ipynb
+++ b/advising.ipynb
@@ -21,29 +21,30 @@
     "\n",
     "\n",
     "### Instructions for use\n",
-    "1. If you have not already done so, fill out your module choices in the provided Excel sheet.\n",
+    "1. If you did not select the "Standard Maths" option when opening the tool, stop your server (File > Hub Control Panel > Stop My Server) and then click the link you used to access the tool again.\n",
+    "2. If you have not already done so, fill out your module choices in the provided Excel sheet.\n",
     "    - You can download a template (`choices-template.xlsx`) from the file tab on the left by right-clicking (MacOS: Control-click) on it. You should then complete it on your own device.\n",
     "    - While the template is intended for students entering Honours, it can also be used by students already in Honours, just fill in the parts of the spreadsheet for future years (previous/current years will be read from your student record below).\n",
-    "2. Upload your module choice sheet to this folder using the upload button on the left:\n",
+    "3. Upload your module choice sheet to this folder using the upload button on the left:\n",
     "<center><img src=\"images/upload.png\" alt=\"Location of upload button, near top-left of window\" width=\"250\"/> </center>\n",
     "    You can alternatively drag-and-drop your file into the file browser area on the left:\n",
     "<center><img src=\"images/files-area.png\" alt=\"Files can be dragged into the file browser pane on the left\" width=\"250\"/></center>\n",
-    "3. Click and drag your choices into the module-choices folder:\n",
+    "4. Click and drag your choices into the module-choices folder:\n",
     "<center><img src=\"images/drag-choices.png\" alt=\"The uploaded xlsx file should be dragged into the module_choices folder\" width=\"250\"/></center>\n",
     "\n",
-    "4. Open your [personal student record](https://portal.st-andrews.ac.uk/personal-student-record/), and click the link \"Academic data CSV\" on the left to download your data.\n",
+    "5. Open MySaint, navigate to your Student Record, and click the link \"Academic data CSV\" on the left to download your data.\n",
     "    - This will be the final link within the section for your current course, as shown below.\n",
     "    - If you have done multiple courses, make sure you download the data for your current programme.\n",
     "<center><img src=\"images/student-data.png\" alt=\"Location of link to download your personal academic data, as the final link within the expandable section for your current course on the left of the page.\" width=\"250\"/> </center>\n",
-    "5. Upload the downloaded data file to this folder, as you did in step 2.\n",
-    "6. Drag the data file into the `student_data` folder, as you did in step 3.\n",
-    "7. Run the code cell at the bottom of this sheet (click on it and then Control-Enter).\n",
+    "6. Upload the downloaded data file to this folder, as you did in step 3.\n",
+    "7. Drag the data file into the `student_data` folder, as you did in step 4.\n",
+    "8. Run the code cell at the bottom of this sheet (click on it and then Control-Enter).\n",
     "    - The output should be straightforward; if there are any errors please read them and check that you have followed the instructions above carefully.\n",
-    "8. Read the output from the cell carefully and consider any issues the tool has identified with your plan.\n",
-    "9. If there are any issues, modify your module choice spreadsheet and re-upload it as in steps 2 and 3, then run the cell below again.\n",
-    "10. Repeat steps 7-9 until you have resolved issues wherever possible.\n",
-    "11. **Save your module choices (Right click > Download) and the `summary.docx` file.** They will be deleted when your server shuts down at the end of your session.\n",
-    "12. Check for yourself that your choices satisfy:\n",
+    "9. Read the output from the cell carefully and consider any issues the tool has identified with your plan.\n",
+    "10. If there are any issues, modify your module choice spreadsheet and re-upload it as in steps 3 and 4, then run the cell below again.\n",
+    "11. Repeat steps 8-10 until you have resolved issues wherever possible.\n",
+    "12. **Save your module choices (Right click > Download) and the `summary.docx` file.** They will be deleted when your server shuts down at the end of your session.\n",
+    "13. Check for yourself that your choices satisfy:\n",
     "    - The [programme requirements](https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp)\n",
     "    - The [timetables](https://www.st-andrews.ac.uk/mathematics-statistics/students/taught-modules/timetables/)\n",
     "    - Pre-requisites and other requirements as listed in the [module catalogue](https://www.st-andrews.ac.uk/subjects/modules/)\n",
