--- a/advising.ipynb
+++ b/advising.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "\n",
     "### Instructions for use\n",
-    "1. If you did not select the "Standard Maths" option when opening the tool, stop your server (File > Hub Control Panel > Stop My Server) and then click the link you used to access the tool again.\n",
+    "1. If you did not select the 'Standard Maths' option when opening the tool, stop your server (`File > Hub Control Panel > Stop My Server`) and then click the link you used to access the tool again.\n",
     "2. If you have not already done so, fill out your module choices in the provided Excel sheet.\n",
     "    - You can download a template (`choices-template.xlsx`) from the file tab on the left by right-clicking (MacOS: Control-click) on it. You should then complete it on your own device.\n",
     "    - While the template is intended for students entering Honours, it can also be used by students already in Honours, just fill in the parts of the spreadsheet for future years (previous/current years will be read from your student record below).\n",
