--- a/advising.ipynb
+++ b/advising.ipynb
@@ -32,7 +32,7 @@
     "4. Click and drag your choices into the module-choices folder:\n",
     "<center><img src=\"images/drag-choices.png\" alt=\"The uploaded xlsx file should be dragged into the module_choices folder\" width=\"250\"/></center>\n",
     "\n",
-    "5. Open MySaint, navigate to your Student Record, and click the link \"Academic data CSV\" on the left to download your data.\n",
+    "5. Open MySaint, navigate to your Student Record (Home > My tasks), and click the link \"Academic data CSV\" on the left to download your data.\n",
     "    - This will be the final link within the section for your current course, as shown below.\n",
     "    - If you have done multiple courses, make sure you download the data for your current programme.\n",
     "<center><img src=\"images/student-data.png\" alt=\"Location of link to download your personal academic data, as the final link within the expandable section for your current course on the left of the page.\" width=\"250\"/> </center>\n",
@@ -43,7 +43,7 @@
     "9. Read the output from the cell carefully and consider any issues the tool has identified with your plan.\n",
     "10. If there are any issues, modify your module choice spreadsheet and re-upload it as in steps 3 and 4, then run the cell below again.\n",
     "11. Repeat steps 8-10 until you have resolved issues wherever possible.\n",
-    "12. **Save your module choices (Right click > Download) and the `summary.docx` file.** They will be deleted when your server shuts down at the end of your session.\n",
+    "12. **Save your module choices (Right click > Download) and the `summary.docx` file from the file tab on the left.** They will be deleted when your server shuts down at the end of your session.\n",
     "13. Check for yourself that your choices satisfy:\n",
     "    - The [programme requirements](https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp)\n",
     "    - The [timetables](https://www.st-andrews.ac.uk/mathematics-statistics/students/taught-modules/timetables/)\n",
