Update advising.ipynb with instructions about module codes

--- a/advising.ipynb
+++ b/advising.ipynb
@@ -25,6 +25,7 @@
     "2. If you have not already done so, fill out your module choices in the provided Excel sheet.\n",
     "    - You can download a template (`choices-template.xlsx`) from the file tab on the left by right-clicking (MacOS: Control-click) on it. You should then complete it on your own device.\n",
     "    - While the template is intended for students entering Honours, it can also be used by students already in Honours, just fill in the parts of the spreadsheet for future years (previous/current years will be read from your student record below).\n",
+    "    - When entering module choices in the Excel sheet, only the module code is read by the tool; the name, credits and hour are not required. Take care that you enter accurate codes.\n",
     "3. Upload your module choice sheet to this folder using the upload button on the left:\n",
     "<center><img src=\"images/upload.png\" alt=\"Location of upload button, near top-left of window\" width=\"250\"/> </center>\n",
     "    You can alternatively drag-and-drop your file into the file browser area on the left:\n",
