Update advising.ipynb to warn of specific circumstances

--- a/advising.ipynb
+++ b/advising.ipynb
@@ -17,6 +17,7 @@
     "- This tool is intended to be a helpful checker but is not definitive. The definitive requirements are laid out the [programme requirements](https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp).\n",
     "- Joint students should be aware that only the Mathematics and Statistics parts of programme requirements are checked.\n",
     "- The input and output of this tool are not official; choices will still need to be made through the usual advising system, and your Adviser of Studies will still need to approve your module choices.\n",
+    "- Errors may for example occur if you have studied abroad, taken a leave of absence, or other situations; in these cases please discuss your module choices directly with your Adviser.\n",
     "- The server *does not* save your module choices or summary output between sessions. You *must* save your module choices and output by downloading it before you exit the server, or it will be lost.\n",
     "\n",
     "\n",
