Update programme requirements link

--- a/advising.ipynb
+++ b/advising.ipynb
@@ -14,7 +14,7 @@
     "We hope that this tool helps you to make your choices. Please read the instructions and warnings below carefully.\n",
     "\n",
     "### Warnings\n",
-    "- This tool is intended to be a helpful checker but is not definitive. The definitive requirements are laid out the [programme requirements](https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp).\n",
+    "- This tool is intended to be a helpful checker but is not definitive. The definitive requirements are laid out the [programme requirements](https://www.st-andrews.ac.uk/subjects/reqs/).\n",
     "- Joint students should be aware that only the Mathematics and Statistics parts of programme requirements are checked.\n",
     "- The input and output of this tool are not official; choices will still need to be made through the usual advising system, and your Adviser of Studies will still need to approve your module choices.\n",
     "- Errors may for example occur if you have studied abroad, taken a leave of absence, or other situations; in these cases please discuss your module choices directly with your Adviser.\n",
@@ -47,7 +47,7 @@
     "11. Repeat steps 8-10 until you have resolved issues wherever possible.\n",
     "12. **Save your module choices (Right click > Download) and the `summary.docx` file from the file tab on the left.** They will be deleted when your server shuts down at the end of your session.\n",
     "13. Check for yourself that your choices satisfy:\n",
-    "    - The [programme requirements](https://e-vision.st-andrews.ac.uk/cview/reqs/2024-25/list.html?v=dp)\n",
+    "    - The [programme requirements](https://www.st-andrews.ac.uk/subjects/reqs/)\n",
     "    - The [timetables](https://www.st-andrews.ac.uk/mathematics-statistics/students/taught-modules/timetables/)\n",
     "    - Pre-requisites and other requirements as listed in the [module catalogue](https://www.st-andrews.ac.uk/subjects/modules/)\n",
     "\n",
