--- a/advising.ipynb
+++ b/advising.ipynb
@@ -17,7 +17,7 @@
     "- This tool is intended to be a helpful checker but is not definitive. The definitive requirements are laid out the [programme requirements](https://www.st-andrews.ac.uk/subjects/reqs/).\n",
     "- Joint students should be aware that only the Mathematics and Statistics parts of programme requirements are checked.\n",
     "- The input and output of this tool are not official; choices will still need to be made through the usual advising system, and your Adviser of Studies will still need to approve your module choices.\n",
-    "- Errors may for example occur if you have studied abroad, taken a leave of absence, or other situations; in these cases please discuss your module choices directly with your Adviser.\n",
+    "- Errors may for example occur if you have studied abroad, taken a leave of absence, or in other situations; in these cases please discuss your module choices directly with your Adviser.\n",
     "- The server *does not* save your module choices or summary output between sessions. You *must* save your module choices and output by downloading it before you exit the server, or it will be lost.\n",
     "\n",
     "\n",
@@ -38,10 +38,14 @@
     "    - This will be the final link within the section for your current course, as shown below.\n",
     "    - If you have done multiple courses, make sure you download the data for your current programme.\n",
     "<center><img src=\"images/student-data.png\" alt=\"Location of link to download your personal academic data, as the final link within the expandable section for your current course on the left of the page.\" width=\"250\"/> </center>\n",
+    "\n",
     "6. Upload the downloaded data file to this folder, as you did in step 3.\n",
     "7. Drag the data file into the `student_data` folder, as you did in step 4.\n",
     "8. Run the code cell at the bottom of this sheet (click on it and then Control-Enter).\n",
     "    - The output should be straightforward; if there are any errors please read them and check that you have followed the instructions above carefully.\n",
+    "    - The code will check your choices against the requirements for your current programme. If you wish to check against a different programme, set the `new_programme` variable in the code below, e.g.:\n",
+    "        - `new_programme = \"Master in Mathematics (Honours) Applied Mathematics\"`.\n",
+    "        - This must exactly match the name on the [programme requirements page](https://www.st-andrews.ac.uk/subjects/reqs/) and be contained in quotes `\" \"`.\n",
     "9. Read the output from the cell carefully and consider any issues the tool has identified with your plan.\n",
     "10. If there are any issues, modify your module choice spreadsheet and re-upload it as in steps 3 and 4, then run the cell below again.\n",
     "11. Repeat steps 8-10 until you have resolved issues wherever possible.\n",
@@ -66,7 +70,9 @@
    "outputs": [],
    "source": [
     "from advising import process_folder, save_summary_data_frame\n",
-    "summary = process_folder(\"module_choices\")\n",
+    "\n",
+    "new_programme = None  # Change this if you want to test your choices for a new programme of study.\n",
+    "summary = process_folder(\"module_choices\", programme_name = new_programme)\n",
     "save_summary_data_frame(summary, \"summary.docx\")"
    ]
   }
